# minit

./: .gitignore  Cargo.toml  README.md  ROADMAP-v0.4.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml  security.yml
config/examples/: crashy.service.toml  demo-sleep.service.toml  getty.service.toml  hardening-check.service.toml  long-running.service.toml  multi-user.target.toml  network.service.toml  optional-broken.mount.toml  optional-fail.service.toml  parallel-a.service.toml  parallel-b.service.toml  parallel.target.toml  required-fail.service.toml  required-failure.target.toml  rescue-shell.service.toml  scratch.swap.toml  seccomp-deny-write.service.toml  sshd.service.toml  stubborn.service.toml  var-log.mount.toml  wanted-failure.target.toml
crates/minit-core/: Cargo.toml
crates/minit-testkit/: Cargo.toml
crates/minitctl/: Cargo.toml
crates/minitd/: Cargo.toml
crates/minitd/src/: cgroups.rs  control.rs  early_mounts.rs  lib.rs  main.rs  reaper.rs  rescue.rs  runtime.rs  shutdown.rs  storage.rs  units.rs
docs/: daily-driver-candidate.md  install.md  profiles.md  release-template.md  security-review.md  unit-conversion.md  v1-readiness.md
docs/releases/: v0.1.0-experimental.md  v0.2.0-experimental.md  v0.3.0-experimental.md  v0.4.0-experimental.md  v0.4.0.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ipc_decode.rs  unit_parse.rs
tests/vm/: README.md
tools/: install-package.ps1  package-release.ps1  sign-release.ps1  verify-install-rollback.ps1  verify-release.ps1  verify-security.ps1  verify-v1-readiness.ps1
tools/vm/: build-initramfs.ps1  (+12 more)
(+27 files in other folders)
