[workspace]
resolver = "2"
members = [
  "crates/minit-core",
  "crates/minitd",
  "crates/minitctl",
  "crates/minit-testkit",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/imattas/minit"

[workspace.dependencies]
minit-core = { path = "crates/minit-core" }
minit-testkit = { path = "crates/minit-testkit" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
libc = "0.2"
nix = { version = "0.30", features = ["fs", "mount", "process", "signal", "user"] }
toml = "0.9"
